# data_base_learning

./: README.md
g4g_short_course/common/: utils.h
g4g_short_course/create_table/: .gitignore  CMakeLists.txt  build.sh  main.cpp
g4g_short_course/insert_and_delete/: CMakeLists.txt  main.cpp
g4g_short_course/open_data_base/: CMakeLists.txt  main.cpp
g4g_short_course/using_sqlite_callback/: CMakeLists.txt  build.sh  main.cpp
sql_course_yt/DataBase/: quiz  quiz.sqbpro
sql_course_yt/part_1/: my_answers.txt  questions.txt
sql_course_yt/part_2/: questions.txt
sql_course_yt/part_2/DataBase/: bookstore
sql_course_yt/part_3/: excersises.txt
sql_course_yt/part_3/DataBase/: bookstore.sql
sql_course_yt/part_4/: questions.txt
sql_course_yt/part_4/DataBase/: bookstore  orders.csv  orders.sql
sql_course_yt/part_6/: questions.txt
sql_course_yt/part_7/: JOINs.txt
